# test-coin

./: CMakeLists.txt
src/: CoinTest.cpp  SoFC3DEffects.cpp  SoFC3DEffects.h
